# Claimfold

./: .gitignore  EXPERIMENTS.md  Makefile  PR1_FOLLOWUPS.md  README.md  council.sh  pyproject.toml
apps/platform_smoke/: pyproject.toml
apps/platform_smoke/platform_smoke/: __init__.py  ledger_demo.py  plan_demo.py
apps/research_council/: council.sh  pyproject.toml
apps/research_council/config/: executors.yaml  focus_rules.yaml  guest_aliases.yaml  guests.yaml  guests.yaml.template  role_card_presets.yaml  role_cards.yaml  roles.yaml
apps/research_council/config/bindings/: executor-guest.yaml  project-development.yaml
apps/research_council/lib/: engine.py  meeting_quality.py
apps/research_council/lib/council/: __init__.py  cli.py  cli_runner.py  config.py  daily.py  executor_guest.py  failure_policy.py  focus_rules.py  formatting.py  guest_aliases.py  guest_overrides.py  guests.py  hitl.py  metrics.py  (+8 more)
apps/research_council/scripts/: archive_meeting_experiment.py  audit_guest_round.sh  compare_meetings.py  council_daemon.py  dedupe_guest_output.py  extract_engine_modules.py  fetch_macro.py  run_grok_guest.sh
apps/research_council/web/: server.py
platform/: README.md  pyproject.toml
platform/missionos/: __init__.py  formatting.py  protocols.py  utils.py
platform/missionos/context/: __init__.py  pack.py
platform/missionos/daemon/: __init__.py  health.py  runner.py
platform/missionos/executor/: __init__.py  invoke.py
platform/missionos/ledger/: __init__.py  replay.py  store.py
platform/missionos/plan/: __init__.py  cli_bindings.py  compiler.py  loader.py  models.py  paths.py  reader.py  start.py  validators.py  writer.py
platform/missionos/schemas/: meeting_plan.schema.json
platform/missionos/session/: __init__.py  events.py  paths.py  store.py
(+231 files in other folders)
