[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-smoke"
version = "0.1.0"
description = "Minimal missionos consumer — Platform/App split independence fixture"
requires-python = ">=3.10"
dependencies = ["missionos"]

[tool.setuptools.packages.find]
where = ["."]
include = ["platform_smoke*"]