[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "research-council"
version = "0.2.0"
description = "Claimfold Research Council meeting application"
requires-python = ">=3.10"
dependencies = ["missionos"]

[tool.setuptools]
package-dir = { "" = "lib" }
py-modules = ["engine", "meeting_quality"]

[tool.setuptools.packages.find]
where = ["lib"]
include = ["council*"]